# rust_backend

./: .gitignore  Cargo.toml  Dockerfile.actions  Dockerfile.dev  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  justfile
.github/: dependabot.yaml
.github/workflows/: build_and_push.yml  ci.yml
db/: Cargo.toml
db/src/: lib.rs  main.rs
db/src/migrations/: m20260423_000001_create_user_table.rs  m20260423_000002_create_password_reset_token_table.rs  mod.rs
db/src/models/: mod.rs  password_reset_token.rs  prelude.rs  user.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: main.rs  state.rs
src/common/: mod.rs
src/docs/: mod.rs  tags.rs
src/docs/static/: README.md  index.html  swagger-ui-bundle.js  swagger-ui.css
src/errors/: mod.rs
src/routers/: mod.rs
src/routers/auth/: check_session.rs  login.rs  logout.rs  mod.rs  register.rs
src/services/auth/: jwt.rs  mod.rs  password.rs  user_auth.rs
