[package]
name = "backend"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [".", "db"]

[features]
default = []
listenfd = ["dep:listenfd"]

[dependencies]
db = { path = "db" }
proc_macros = { path = "proc_macros" }


# External
aide = { version = "0.16.0-alpha.4", features = [
    "redoc",
    "swagger",
    "macros",

    "axum",
    "axum-extra",
    "axum-multipart",
    "axum-json",
    "axum-query",
    "axum-form",
    "axum-extra-headers",

] }
axum = { version = "0.8.1", features = ["macros", "ws", "multipart"] }
axum-extra = { version = "0.12.6", features = ["typed-header", "multipart"] }
schemars = { version = "1.2.1", features = ["uuid1", "chrono04"] }

base64 = { version = "0.22.1" }

serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full", "io-std", "io-util"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

dotenvy = "0.15"
log = "0.4"
env_logger = "0.11.8"
tracing = "0.1.41"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace", "cors"] }
headers = "0.4.1"
reqwest = { version = "0.13.2", features = ["json", "native-tls-vendored"] }
chrono = "0.4.41"

mime_guess = "2.0.5"
hyper = "1.7.0"
sea-orm = "1.1.15"

async-stripe = { version = "0.41.0", features = [
    "runtime-tokio-hyper",
    "full",
] }
listenfd = { version = "1.0.2", optional = true }
regex = "1.11.1"
argon2 = "0.5"
jsonwebtoken = "10"
rand = "0.10"
