[package]
name = "db"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "db"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "1.1.15", features = ["uuid", "chrono"] }
async-std = { version = "1.13.2", features = ["attributes", "tokio1"] }
serde = { version = "1", features = ["derive"] }
schemars = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dependencies.sea-orm-migration]
version = "1.1.15"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
